# photography-blog

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
.github/workflows/: rust.yml
gui/: README.md  package-lock.json  package.json
gui/src/: index.css  index.js  routes.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: blog.rs  common.rs  img.rs  main.rs  state.rs  utils.rs
gui/src/components/: add-blog.jsx  blog-list.jsx  frame.jsx  img-list.jsx
gui/src/pages/: index.jsx  pics.jsx
gui/src/service/: config.js  index.js  utils.js
public/: index.html
src/: command.rs  config.rs  frame.rs  image.rs  main.rs  parser.rs  render.rs
template/: index.html
template/assets/css/: main.css
template/assets/js/: main.js
