[package]
name = "blog-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.15.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
urlencoding = "2.1.0"
kamadak-exif = "0.5.4"
